Fix too large code display in file contents

--- a/progit/static/progit.css
+++ b/progit/static/progit.css
@@ -603,3 +603,7 @@ pre {
 .pr {
     float: right;
 }
+
+.highlight {
+    overflow: auto;
+}
